# piksi_firmware_private

./: .clang-format  .gdbinit  .gitignore  .gitmodules  .travis.yml  DEVELOPMENT.md  Dockerfile  HITL.md  Jenkinsfile  Makefile  README.md  RELEASE-NOTES.md  TEST_BUILD.md  Vagrantfile  ansible.cfg  assemble_artifacts.py  comment.sh  complete-build.yaml  complete-build.yml  create_static_library.sh  docker-compose.yml  docker-entrypoint.bash  hitl_smoke_test.sh  kickoff_hitl.sh  meson.build  piksi-toolchain.cmake  publish.sh  requirements.yaml  requirements.yaml.m4  setup.sh  starling_build_config.cmake  static_library_files.txt  static_library_test_files.txt  static_search_copy.sh  test-build.yml  test_upload_artifacts.py  travis.sh  travis_pr_describe.sh  upload_artifacts.py  yolo.sh
.github/: PULL_REQUEST_TEMPLATE.md
apps/mesta/: README.md
docs/: Doxyfile
mesta/: .gitignore  Makefile  README.md  compile_commands.json  main.c
mesta/stubs/: ch.h  hal.h  osal.h  pvt_driver_stubs.c  simulator.h  starling_platform_stubs.c  stubs.c  version.h
scripts/: clang-format-check.sh  clang-tidy-check.sh  hitl_smoke_test_jenkins.py  pbr_script_lib.py
scripts/ci/: Dockerfile.clang-tidy  check_for_s3_cred.sh  clang-tidy.sh  docker-build-clang-tidy.sh  docker-clang-tidy.sh  travis-clang-format-check.sh  travis-clang-tidy-check.sh
src/: Makefile  alias.c  alias.h  base_obs.c  base_obs.h  chconf.h  clock_filter.c  clock_filter.h  cnav_msg_storage.h  common_calc_pvt.c  common_calc_pvt.h  cw.h  decode.c  decode.h  dum.c  dum.h  ephemeris.c  ephemeris.h  ext_events.c  ext_events.h  flash.h  glo_map.c  glo_map.h  glo_map_setup.c  glo_map_setup.h  gnss_capabilities.c  gnss_capabilities.h  init.h  l2c_capability.c  l2c_capability.h  main.c  main.h  manage.c  manage.h  me_calc_pvt.c  me_calc_pvt.h  nav_meas_calc.c  nav_meas_calc.h  ndb.c  ndb.h  (+56 more)
src/acq/: manage.c  manage.h
src/board/: acq.h  frontend.h  me_max_channels.h
src/calc/: base_obs.c  calc_base_obs.c  calc_base_obs.h  calc_nav_meas.c  calc_nav_meas.h  calc_pvt_common.c  calc_pvt_common.h  calc_pvt_me.c  calc_pvt_me.h  calc_pvt_starling.c  calc_pvt_starling.h  calc_pvt_thread_time_matched.c  calc_pvt_thread_time_matched.h  calc_starling_obs_array.c  calc_starling_obs_array.h  common_calc_pvt.h  firmware_starling.c  firmware_starling.h  fixed_allocator.c  fixed_allocator.h  mailbox.c  mailbox.h  me_calc_pvt.c  object_pool.c  object_pool.h  observation_thread.c  observation_thread.h  sbp_duplex_link.h  sbp_settings_client.c  sbp_settings_client.h  starling_base_obs.c  starling_base_obs.h  starling_calc_pvt.c  starling_chibios_shim.c  starling_efilter.c  starling_efilter.h  starling_external_dependencies.h  starling_input_bridge.c  starling_input_bridge.h  starling_integration.c  (+23 more)
src/cfg/: chconf.h  error.h  init.h
src/cfs/: cfs-coffee.c
src/cn0_est/: cn0_est_basic.c  cn0_est_bl.c  cn0_est_ch.c  cn0_est_common.h  cn0_est_mm.c  cn0_est_nwpr.c  cn0_est_rscn.c  cn0_est_snv.c  cn0_est_svr.c  cn0_noise.c  noise.c
src/decode/: decode.c  decode.h  decode_bds.c  decode_bds.h  decode_bds3_b5.c  decode_bds3_b5.h  decode_bds_b1.c  decode_bds_b1.h  decode_bds_b2.c  decode_bds_b2.h  decode_bds_d1.c  decode_bds_d1.h  decode_common.c  decode_common.h  decode_gal_e1.c  decode_gal_e1.h  decode_gal_e5.c  decode_gal_e5.h  decode_gal_e7.c  decode_gal_e7.h  decode_glo_l1ca.c  decode_glo_l1ca.h  decode_glo_l1of.c  decode_glo_l1of.h  decode_glo_l2ca.c  decode_glo_l2ca.h  decode_glo_l2of.c  decode_glo_l2of.h  decode_gps_l1ca.c  decode_gps_l1ca.h  decode_gps_l2c.c  decode_gps_l2c.h  decode_gps_l2cl.c  decode_gps_l2cl.h  decode_gps_l5.c  decode_gps_l5.h  decode_qzss_l1ca.c  decode_qzss_l1ca.h  decode_qzss_l2c.c  decode_qzss_l2c.h  (+4 more)
src/filter/: filter_bw2.c  filter_common.h  filter_lp1.c
src/hal/: can_enabled.c  can_enabled.h  is_duro.c  is_duro.h  piksi_systime.c  piksi_systime.h
src/lib/: fifo.c  fifo.h  fixed_fft_r2.c  fixed_fft_r2.h
src/main/: main.c  main.h
src/me_msg/: me_msg.c  me_msg.h
src/nav_msg/: cnav_msg.c  cnav_msg.h  cnav_msg_storage.c  cnav_msg_storage.h  cons_time_storage.c  cons_time_storage.h  nav_msg.c  nav_msg.h  nav_msg_bds.c  nav_msg_bds.h  nav_msg_gal.c  nav_msg_gal.h  nav_msg_glo.c  nav_msg_glo.h  sbas_msg.c  sbas_msg.h
src/ndb/: ndb.c  ndb.h  ndb_almanac.c  ndb_almanac.h  ndb_common.h  ndb_ephemeris.c  ndb_ephemeris.h  ndb_fs_access.h  ndb_gnss_capabilities.c  ndb_gnss_capabilities.h  ndb_internal.c  ndb_internal.h  ndb_iono.c  ndb_iono.h  ndb_l2c_capb.c  ndb_l2c_capb.h  ndb_lgf.c  ndb_lgf.h  ndb_utc.c  ndb_utc.h
src/peripherals/: 3drradio.c  3drradio.h  leds.c  leds.h  random.c  random.h  spi_wrapper.c  spi_wrapper.h  stm_flash.c  stm_flash.h  usart.c  usart.h  watchdog.c  watchdog.h
src/reacq/: reacq_api.h  reacq_manage.c  reacq_manage.h  reacq_sbp_utility.c  reacq_sbp_utility.h  sbas_reacq.c  sbas_reacq.h  scheduler.c  scheduler_api.h  scheduler_unittest.c  scheduler_utils.c  search_manager.c  search_manager_api.h  search_manager_unittest.c  search_manager_utils.c  search_manager_utils.h  task_generator.c  task_generator_api.h  task_generator_unittest.c
src/rfoff/: rfoff.c  rfoff.h
src/sbp/: sbp.c  sbp.h  sbp_fileio.c  sbp_fileio.h  sbp_utils.c  sbp_utils.h
src/shm/: shm.c  shm.h
src/simulator/: simulator.c  simulator.h  simulator_data.c  simulator_data.h
src/soft_macq/: bds2_prns.c  bds2_prns.h  bds_prns.c  bds_prns.h  gal_e1b_mem.c  gal_e1b_mem.h  gal_e1c_mem.c  gal_e1c_mem.h  gal_prns.c  gal_prns.h  prns.c  prns.h  qzss_prns.c  qzss_prns.h  soft_macq_defines.h  soft_macq_main.c  soft_macq_main.h  soft_macq_mdbzp.c  soft_macq_mdbzp.h  soft_macq_serial.c  soft_macq_serial.h  soft_macq_utils.c  soft_macq_utils.h
src/specan/: specan_main.c  specan_main.h
src/starling_platform/: mutex.c  thread.c
src/track/: track_api.c  (+64 more)
static_library_test/: error.h
tests/: Makefile  Makefile.include  README.md  ch.h  check_cn0_estimator.c  test_clock_filter.cc  test_cn0_est.cc  test_cn0_estimator.cc  test_fft.cc  test_filters.cc  test_piksi_systime.cc  test_prns.cc  test_sbas_select.cc  test_trk_loop.cc
(+948 files in other folders)
